# cmd/main.go
@@ -1,10 +1,3 @@
-// @title Collab Notes API
-// @version 1.0
-// @description API para la aplicación de notas colaborativas.
-// @host localhost:8080
-// @BasePath /
-// @schemes http
-
 package main
 
 import (
@@ -16,11 +9,16 @@ import (
 	"github.com/Collab-Notes/colab-notes-back/models"
 	"github.com/gin-gonic/gin"
 
-	_ "github.com/Collab-Notes/colab-notes-back/docs"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @title Collab Notes API
+// @version 1.0
+// @description API para la aplicación de notas colaborativas.
+// @host localhost:8080
+// @BasePath /
+// @schemes http
 func main() {
 	// Cargar configuración y conectar a la base de datos
 	config := common.LoadConfig()
@@ -57,7 +55,7 @@ func main() {
 
 	// Rutas
 	router.POST("/vaults", controllers.CreateVault())
-	router.GET("/vaults/:id", controllers.GetVault())
+	router.GET("/vaults/:id", controllers.GetUserData())
 	router.POST("/vaults/:id/notes", controllers.CreateNote())
 
 	// Configuración de Swagger
